--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -76,8 +76,9 @@
                             <Button Content="Browse" Width="120" HorizontalAlignment="Left" Margin="15,0,0,0" x:Name="openColorFile" Click="openColorFile_Click" IsEnabled="{DynamicResource notRenderingOrPreviewing}"/>
                         </DockPanel>
                         <DockPanel Margin="0,10,0,0">
-                            <Button Content="Load" HorizontalAlignment="Left" Width="130" IsEnabled="{DynamicResource notRendering}" x:Name="loadColors" Click="loadColors_Click"/>
-                            <Button Content="Use default" HorizontalAlignment="Left" Width="130" Margin="15,0,0,0" IsEnabled="{DynamicResource notRendering}" x:Name="useDefaultColors" Click="useDefaultColors_Click"/>
+                        <Button Content="Load PFA palette" HorizontalAlignment="Left" Width="130" IsEnabled="{DynamicResource notRendering}" x:Name="loadPFAColors" Click="loadPFAColors_Click"/>
+                            <Button Content="Load" HorizontalAlignment="Left" Width="130" Margin="15,0,0,0" IsEnabled="{DynamicResource notRendering}" x:Name="loadColors" Click="loadColors_Click"/>
+                            <Button Content="Reset" HorizontalAlignment="Left" Width="130" Margin="15,0,0,0" IsEnabled="{DynamicResource notRendering}" x:Name="useDefaultColors" Click="useDefaultColors_Click"/>
                             <ui:BetterCheckbox Text="Random colours" HorizontalAlignment="Left" Margin="5,0,0,0" IsEnabled="{DynamicResource notRendering}" x:Name="enableRandomColor" CheckToggled="enableRandomColor_CheckToggled"/>
                         </DockPanel>
                         <DockPanel Margin="0,15,0,0">
@@ -85,7 +86,16 @@
                             <Label Content="#"/>
                             <TextBox Text="800000" HorizontalAlignment="Left" Width="120" MaxLength="6" x:Name="barColor"/>
                             <Canvas Width="30" Margin="10,0,0,0" x:Name="previewColor"/>
-                            <Button Content="Set up" HorizontalAlignment="Left" Width="120" Margin="10,0,0,0" x:Name="setBarColor" Click="setBarColor_Click" IsEnabled="{DynamicResource notRenderingOrPreviewing}"/>
+                            <Button Content="Set" HorizontalAlignment="Left" Width="120" Margin="10,0,0,0" x:Name="setBarColor" Click="setBarColor_Click" IsEnabled="{DynamicResource notRenderingOrPreviewing}"/>
+                        </DockPanel>
+                        <DockPanel Margin="0,10,0,0">
+                            <Label Content="Background colour (RGB):" Width="200" HorizontalAlignment="Left"/>
+                            <Label Content="#"/>
+                            <TextBox Text="000000" HorizontalAlignment="Left" Width="120" MaxLength="6" x:Name="bgColor"/>
+                            <Border Background="Black" Margin="10,0,0,0" Width="30">
+                                <Canvas x:Name="previewBackgroundColor" Margin="1,0,1,0"/>
+                            </Border>
+                            <Button Content="Set" HorizontalAlignment="Left" Width="120" Margin="10,0,0,0" x:Name="setbgColor" Click="setbgColor_Click" IsEnabled="{DynamicResource notRenderingOrPreviewing}"/>
                         </DockPanel>
                     </StackPanel>
                 </Grid>
