--- a/UI/Material.xaml
+++ b/UI/Material.xaml
@@ -28,7 +28,7 @@
                     <Border Name="border"
                         BorderThickness="1"
                         Padding="4,2"
-                        BorderBrush="DarkGray"
+                        BorderBrush="#444145"
                         CornerRadius="3"
                         Background="{TemplateBinding Background}">
                         <Grid >
@@ -165,7 +165,7 @@
         <Setter Property="OverridesDefaultStyle" Value="True"/>
         <Setter Property="Focusable" Value="False"/>
         <Setter Property="FontSize" Value="14"/>
-        <Setter Property="Foreground" Value="White"/>
+        <Setter Property="Foreground" Value="white"/>
         <Setter Property="FontFamily" Value="{StaticResource Font}"/>
         <Setter Property="Padding" Value="6"/>
         <Setter Property="Template">
@@ -192,7 +192,7 @@
                             <Trigger.EnterActions>
                                 <BeginStoryboard>
                                     <Storyboard>
-                                        <ColorAnimation Storyboard.TargetName="bgBrush" Storyboard.TargetProperty="Color" Duration="0:0:0.1" To="#0E9DD2" />
+                                        <ColorAnimation Storyboard.TargetName="bgBrush" Storyboard.TargetProperty="Color" Duration="0:0:0.1" To="{StaticResource PrimaryColor}" />
                                         <DoubleAnimation Storyboard.TargetName="dropShadow" Storyboard.TargetProperty="BlurRadius" Duration="0:0:0.1" To="10" />
                                     </Storyboard>
                                 </BeginStoryboard>
@@ -210,7 +210,7 @@
                             <Trigger.EnterActions>
                                 <BeginStoryboard>
                                     <Storyboard>
-                                        <ColorAnimation Storyboard.TargetName="bgBrush" Storyboard.TargetProperty="Color" Duration="0:0:0.1" To="#999999" />
+                                        <ColorAnimation Storyboard.TargetName="bgBrush" Storyboard.TargetProperty="Color" Duration="0:0:0.1" To="#444145" />
                                         <DoubleAnimation Storyboard.TargetName="dropShadow" Storyboard.TargetProperty="BlurRadius" Duration="0:0:0.0" To="3" />
                                     </Storyboard>
                                 </BeginStoryboard>
@@ -246,10 +246,10 @@
                         </Border>
                         <Border x:Name="templateRoot" SnapsToDevicePixels="true">
                             <Border.Background>
-                                <SolidColorBrush x:Name="solidBrush" Color="#FEFEFE"/>
+                                <SolidColorBrush x:Name="solidBrush" Color="{StaticResource PrimaryColor}"/>
                             </Border.Background>
                             <Border x:Name="splitBorder" BorderBrush="Transparent" BorderThickness="1" HorizontalAlignment="Right" Margin="0" SnapsToDevicePixels="true" Width="{DynamicResource {x:Static SystemParameters.VerticalScrollBarWidthKey}}">
-                                <Path x:Name="arrow" Data="F1 M -2,0 L 2.667,2.66665 L 7.3334,0 L 7.3334,-1.78168 L 2.6667,0.88501 L-2,-1.78168 L-2,0 Z" Fill="{StaticResource PrimaryBrush}" HorizontalAlignment="Center" Margin="0" VerticalAlignment="Center"/>
+                                <Path x:Name="arrow" Data="F1 M -2,0 L 2.667,2.66665 L 7.3334,0 L 7.3334,-1.78168 L 2.6667,0.88501 L-2,-1.78168 L-2,0 Z" Fill="white" HorizontalAlignment="Center" Margin="0" VerticalAlignment="Center"/>
                             </Border>
                         </Border>
                     </Grid>
@@ -266,7 +266,7 @@
                             <DataTrigger.EnterActions>
                                 <BeginStoryboard>
                                     <Storyboard>
-                                        <ColorAnimation Storyboard.TargetName="solidBrush" Storyboard.TargetProperty="Color" Duration="0:0:0.1" To="#CDEFFF" />
+                                        <ColorAnimation Storyboard.TargetName="solidBrush" Storyboard.TargetProperty="Color" Duration="0:0:0.1" To="{StaticResource PrimaryColor}" />
                                         <DoubleAnimation Storyboard.TargetName="dropShadow" Storyboard.TargetProperty="BlurRadius" Duration="0:0:0.1" To="10" />
                                     </Storyboard>
                                 </BeginStoryboard>
@@ -274,7 +274,7 @@
                             <DataTrigger.ExitActions>
                                 <BeginStoryboard>
                                     <Storyboard>
-                                        <ColorAnimation Storyboard.TargetName="solidBrush" Storyboard.TargetProperty="Color" Duration="0:0:0.1" To="#FEFEFE" />
+                                        <ColorAnimation Storyboard.TargetName="solidBrush" Storyboard.TargetProperty="Color" Duration="0:0:0.1" To="{StaticResource PrimaryColor}" />
                                         <DoubleAnimation Storyboard.TargetName="dropShadow" Storyboard.TargetProperty="BlurRadius" Duration="0:0:0.1" To="5" />
                                     </Storyboard>
                                 </BeginStoryboard>
@@ -287,8 +287,8 @@
     </Style>
     <Style TargetType="{x:Type ComboBox}">
         <Setter Property="FontSize" Value="14"/>
-        <Setter Property="Foreground" Value="{StaticResource PrimaryBrush}"/>
-        <Setter Property="Background" Value="#EFEFEF"/>
+        <Setter Property="Foreground" Value="white"/>
+        <Setter Property="Background" Value="{StaticResource PrimaryBrush}"/>
         <Setter Property="FontFamily" Value="{StaticResource Font}"/>
         <Setter Property="Template">
             <Setter.Value>
@@ -300,7 +300,7 @@
                         </Grid.ColumnDefinitions>
                         <Popup x:Name="PART_Popup" AllowsTransparency="true" Grid.ColumnSpan="2" IsOpen="{Binding IsDropDownOpen, Mode=TwoWay, RelativeSource={RelativeSource TemplatedParent}}" Margin="1" PopupAnimation="{DynamicResource {x:Static SystemParameters.ComboBoxPopupAnimationKey}}" Placement="Bottom">
                             <Grid MinWidth="{Binding RelativeSource={RelativeSource Mode=TemplatedParent}, Path=ActualWidth}">
-                                <Border Background="#EFEFEF">
+                                <Border Background="Black">
                                     <Border.Effect>
                                         <DropShadowEffect ShadowDepth="0" BlurRadius="2"/>
                                     </Border.Effect>
@@ -341,11 +341,11 @@
         </Setter>
     </Style>
     <Style TargetType="{x:Type ComboBoxItem}">
-        <Setter Property="Foreground" Value="{StaticResource PrimaryBrush}"/>
+        <Setter Property="Foreground" Value="white"/>
         <Setter Property="FontSize" Value="14"/>
         <Setter Property="Padding" Value="5"/>
         <Setter Property="FontFamily" Value="{StaticResource Font}"/>
-        <Setter Property="Background" Value="#FEFEFE"/>
+        <Setter Property="Background" Value="{StaticResource PrimaryBrush}"/>
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type ComboBoxItem}">
@@ -354,7 +354,7 @@
                     </Border>
                     <ControlTemplate.Triggers>
                         <Trigger Property="IsMouseOver" Value="True">
-                            <Setter Property="Background" Value="#CDEFFF"/>
+                            <Setter Property="Background" Value="#444145"/>
                         </Trigger>
                     </ControlTemplate.Triggers>
                 </ControlTemplate>
@@ -363,9 +363,9 @@
     </Style>
     
     <Style TargetType="{x:Type TextBox}">
-        <Setter Property="Background" Value="White"/>
+        <Setter Property="Background" Value="#444145"/>
         <Setter Property="FontFamily" Value="{StaticResource Font}"/>
-        <Setter Property="Foreground" Value="{StaticResource PrimaryBrush}"/>
+        <Setter Property="Foreground" Value="white"/>
         <Setter Property="VerticalContentAlignment" Value="Center"/>
         <Setter Property="Padding" Value="3"/>
         <Setter Property="Template">
