--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -79,7 +79,7 @@
                                 <ui:NumberSelect Minimum="5" Maximum="45" Value="15" x:Name="keyboardHeightPercentage" HorizontalAlignment="Left" Width="100" ValueChanged="keyboardHeightPercentage_ValueChanged" IsEnabled="{DynamicResource notRenderingOrPreviewing}"/>
                             </DockPanel>
                             <DockPanel Margin="0,10,0,3">
-                                <ui:BetterCheckbox Text="C4 Square" Margin="0,0,0,0" IsChecked="False" x:Name="drawGreySquare" CheckToggled="drawGreySquare_CheckToggled">
+                                <ui:BetterCheckbox Text="C middle key Square" Margin="0,0,0,0" IsChecked="False" x:Name="drawGreySquare" CheckToggled="drawGreySquare_CheckToggled">
                                     <ui:BetterCheckbox.IsEnabled>
                                         <MultiBinding Converter="{StaticResource AndValueConverter}">
                                             <Binding ElementName="drawKeyboard" Path="IsChecked"/>
@@ -95,7 +95,7 @@
                                 <ui:BetterCheckbox Text="Gradients" HorizontalAlignment="Left" Margin="0,0,0,0" IsEnabled="{DynamicResource notRenderingOrPreviewing}" x:Name="enableNoteColorGradient" CheckToggled="enableNoteColorGradient_CheckToggled" IsChecked="True"/>
                             </DockPanel>
                             <DockPanel Margin="0,3,0,3">
-                                <ui:BetterCheckbox Text="Splitters" HorizontalAlignment="Left" x:Name="enableSeparator" CheckToggled="enableSeparator_CheckToggled" IsChecked="True">
+                                <ui:BetterCheckbox Text="Bar" HorizontalAlignment="Left" x:Name="enableSeparator" CheckToggled="enableSeparator_CheckToggled" IsChecked="True">
                                     <ui:BetterCheckbox.IsEnabled>
                                         <MultiBinding Converter="{StaticResource AndValueConverter}">
                                             <Binding ElementName="notRenderingOrPreviewing" Path="IsEnabled"/>
@@ -105,7 +105,7 @@
                                 </ui:BetterCheckbox>
                             </DockPanel>
                             <DockPanel Margin="0,3,0,3">
-                                <ui:BetterCheckbox Text="Flat notes" HorizontalAlignment="Left" IsEnabled="{DynamicResource notRenderingOrPreviewing}" x:Name="thinnerNotes" CheckToggled="thinnerNotes_CheckToggled" IsChecked="True"/>
+                                <ui:BetterCheckbox Text="Same width notes" HorizontalAlignment="Left" IsEnabled="{DynamicResource notRenderingOrPreviewing}" x:Name="thinnerNotes" CheckToggled="thinnerNotes_CheckToggled" IsChecked="False"/>
                             </DockPanel>
                             <DockPanel Margin="0,3,0,3">
                                 <ui:BetterCheckbox Text="Better Black Keys" HorizontalAlignment="Left" x:Name="betterBlackKeys" CheckToggled="betterBlackKeys_CheckToggled">
